--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 ---
-layout: minimal
+layout: post
 title: "About me"
 permalink: /about/index.html
-description: "Some description about Victor Igor..."
+description: "About Me"
 ---
 
-<img itemprop="image" class="img-rounded about_perfil" src=" https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png" alt="My profile">
+<img itemprop="image" class="img-rounded about_perfil" src="{{site.profile_picture}}" alt="My profile">
 
 <h2>My projects</h2>
 
