--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
 ---
-layout: post
-title: "About me"
+layout: minimal
+title: "Code Everywhere"
 permalink: /about/index.html
 description: "About Me"
 ---
 
 <img itemprop="image" class="img-rounded about_perfil" src="{{site.profile_picture}}" alt="My profile">
+
+<h2>Code Everywhere</h2>
+
 
 <h2>My projects</h2>
 
