--- a/about.html
+++ b/about.html
@@ -1,14 +1,21 @@
 ---
 layout: minimal
-title: "Code Everywhere"
+title: "About me"
 permalink: /about/index.html
-description: "About Me"
+description: "About Sunha"
 ---
 
 <img itemprop="image" class="img-rounded about_perfil" src="{{site.profile_picture}}" alt="My profile">
 
-<h2>Code Everywhere</h2>
+<h1>Code Everywhere</h1>
 
+<h2>About Sunha</h2>
+
+<p>귀여운 햄스터 두마리와 함께 서울에서 살고있는 29살 웹 개발자입니다.</p>
+
+<p>PHP 웹 개발자로 3년간 근무하였으며, Node.js 비동기 프로그래밍과 Python 을 이용한 웹 스크레이핑, 머신러닝에 관심을 가지고 있습니다.</p>
+
+<h2>About Blog</h2>
 
 <h2>My projects</h2>
 
