--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@ description: "About Sunha"
 
 <h2>About Blog</h2>
 
+<p>새로운 지식을 계속해서 습득하고, 정보를 검색하다가 그리고 유용한 정보를 Evernote 앱에 보관하다가 문득 개인적인 블로그에 정리를 해두면 좋겠다는 발상에서 시작하였습니다.</p>
+
+<p>더욱 꼼꼼하고 섬세하게 글을 관리하려고 노력하고 있습니다.</p>
+
 <h2>My projects</h2>
 
 <div class="aboutme">
