--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: "About Sunha"
 
 <h1>Code Everywhere</h1>
 
-<h2>About Sunha</h2>
+<h2>About Me</h2>
 
 <p>귀여운 햄스터 두마리와 함께 서울에서 살고있는 29살 웹 개발자입니다.</p>
 
