--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ description: "About Sunha"
 
 <p>귀여운 햄스터 두마리와 함께 서울에서 살고있는 웹 개발자입니다.</p>
 
-<p>PHP 웹 개발자로 3년간 근무하였으며, Node.js 비동기 프로그래밍과 Python 을 이용한 웹 스크레이핑, 머신러닝에 관심을 가지고 있습니다.</p>
+<p>웹 개발자로 근무하고 있으며, Node.js 비동기 프로그래밍과 Python 을 이용한 웹 스크레이핑, 머신러닝에 관심을 가지고 있습니다.</p>
 
 <h2>About Blog</h2>
 
